sumo/tests/sumo/extended/vaporizer/errors/end_empty/errors.sumo
Warning: Emitter are deprecated; use departpos/departspeed within routes instead.
Error: Attribute 'end' in definition of a(n) vaporizer is empty.
Quitting (on error).
